--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:taniarascia/webpack-boilerplate"
+  },
+  "dependencies": {
+    "js-levenshtein": "^1.1.6"
   }
 }
